--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 				{% capture item_url %}/{{ item.page | remove: 'index.md' | replace: '.md', '.html' }}{% endcapture %}
 
 				<li {% if page.path == item.page %} class="active" {% endif %} >
-					<a href="{{ item_url }}">{{ item.title }}</a>
+					<a href="{{ site.baseurl }}{{ item_url }}">{{ item.title }}</a>
 				</li>
 
 			{% endfor %}
